--- a/Portugal.mw
+++ b/Portugal.mw
@@ -46,6 +46,7 @@
 Lo '''Portugal''' est un payis d’[[Eropa]].
 
 == G·eografia ==
+Lo portugal est un payis en bordura de l'oceano atlantico
 
 == Histouère ==
 
