--- a/Portugal.mw
+++ b/Portugal.mw
@@ -46,7 +46,7 @@
 Lo '''Portugal''' est un payis d’[[Eropa]].
 
 == G·eografia ==
-Lo portugal est un payis en bordura de l'oceano atlantico dens l'oest de la peninsula iberica .Son pont culminante est la serra da estrela à 1847 m de altitud. Sa capitala est liboa avec pres de 2000000 de habitantes.Oporto et faro son ossi nes citas importantes pur quest payis
+Lo portugal est un payis en bordura de l'oceano atlantico dens l'oest de la peninsula iberica .Son pont culminante est la serra da estrela à 1847 m de altitud. Sa capitala est liboa avec pres de 2000000 de habitantes.Oporto et faro son ossi nes velas importantes et grantas pur quest payis
 
 == Histouère ==
 
