*Empty MediaWiki Message*

--- a/Cazacstan.mw
+++ b/Cazacstan.mw
@@ -1,8 +1,49 @@
 {{Graphie_RefB}}
-
+{{Tablô payis
+| Payis_nom_ofic = Қазақстан Республикасы <br>''Qazaqstan Respublïkası''<br> Республика Казахстан <br>''Respublika Kazakhstan''
+<font size="2">Rèpublica du Kazacstan
+| Emâge_drapél = Flag of Kazakhstan.svg
+| de+Nom1 = du Kazacstan
+| Emâge_armouèries = Coat of arms of Kazakhstan (flat).svg
+| Les armouèries de+Nom2 = Les armouèries du Kazacstan
+| Armouèries de+Nom2 = Armouèries du Kazacstan
+| Armouèries = Armouèries
+| Devisa_nac = «xx»
+| Emâge_cârta = LocationKazakhstan.png
+| de+Nom3 = du Kazacstan
+| Lengoues_ofic = xx
+| Vela_cap = [[Astana]]
+| Co-ordonâs_cap = xx [[Nord|N]], xx [[Levant|L]] 
+| Liyen_veles = Veles du Kazacstan
+| Granta_vela = [[Almaty]]
+| Tipo_govèrn = [[Rèpublica]]
+| Titro_govèrn = [[Lista des prèsidents du Kazacstan|Prèsident]]<br />&nbsp;- [[Lista des premiérs ministros du Kazacstan|Premiér ministro]]
+| Nom_govèrn = xx<br />xx
+| Cllassiement_surf = xx<sup>iémo</sup>
+| Surface = xx
+| Égoua = xx
+| Frontiéres = xx
+| Coutes = xx
+| Cllassiement_pop = xx<sup>iémo</sup>
+| Populacion = xx
+| Dâta_pop = xx
+| Densitât = xx
+| Tipo_endèp = xx :<br />&nbsp;- xx :
+| Payis_endèp = xx
+| Dâta_endèp = xx<br />xx
+| Gentilyâ = xx<br />(Plurièl : xx)
+| Monéya = xx
+| Codo_monéya = xx
+| Fus_hor = xx
+| Himno_nac = xx
+| Féta_nac = xx
+| Siglo_nac = xx
+| Domêno_mal = xx
+| Endicatif_tèl = xx
+| Mapa = Kazakhstan-CIA WFB Map.png
+| Notes = 
+}}
 Lo '''Kazacstan''' est un payis d’[[Asia]].
-
-[[Image:LocationKazakhstan.png|350 px|right]]
 
 == G·eografia ==
 
