*Empty MediaWiki Message*

--- a/Timor_levantenc.mw
+++ b/Timor_levantenc.mw
@@ -10,7 +10,7 @@
 | Emâge_cârta = LocationEastTimor.png
 | de+Nom3 = du Timor orientâl
 | Lengoues_ofic = [[Tètoun]]<br />[[Português]]
-| Vela_cap = Dili
+| Vela_cap = [[Dili]]
 | Co-ordonâs_cap = 
 | Liyen_veles = Veles du Timor orientâl
 | Granta_vela = Dili
