*Empty MediaWiki Message*

--- a/Lista_des_veles_capitâles_du_mondo.mw
+++ b/Lista_des_veles_capitâles_du_mondo.mw
@@ -13,7 +13,8 @@ __NOTOC__
 
 * [[Abuja]] ([[Nig·èria]])
 * [[Alg·èr]] ({{Alg·èrie}})
-* [[Astana]] ([[Kazacstan]])
+* [[Ankara]] ({{Turquie}})
+* [[Astana]] ({{Kazacstan}})
 
 == B ==
 
@@ -33,6 +34,7 @@ __NOTOC__
 
 * [[Damas]] ([[Sirie]])
 * [[Dhaka]] ([[Banglladèch·e]])
+* [[Dili]] ([[Timor orientâl]])
 
 == E ==
 
