*Empty MediaWiki Message*

--- a/Chènâ-les-Frasses.mw
+++ b/Chènâ-les-Frasses.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Chènâ-les-Frasses''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Chènâ-les-Frasses''' est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Chainaz-les-Frasses]]
 [[fr:Chainaz-les-Frasses]]
