*Empty MediaWiki Message*

--- a/Lelyin.mw
+++ b/Lelyin.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Lelyin''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Lelyin''' est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Lullin]]
 [[fr:Lullin]]
