*Empty MediaWiki Message*

--- a/Tonon.mw
+++ b/Tonon.mw
@@ -1,6 +1,6 @@
 {{Grafia RèfB S}}
 [[Image:200505-Thonon Hotel de Ville.JPG|thumb|350px|L’hotâl de vela de Tonon.]]
-'''Tonon''' est ’na comena et ’na sot-prèfèctura du dèpartement d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Tonon''' est ’na comena et ’na sot-prèfèctura du dèpartement d’la [[Savouè d’Amont]].
 
 == G·eografia ==
 
@@ -10,7 +10,7 @@ Tonon est situâ u bôrd du [[Lèman]].
 
 * [http://www.ville-thonon.fr/ Le seto oficièl d’la vela de Tonon]
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Thonon-les-Bains]]
 [[en:Thonon-les-Bains]]
