--- a/Prengi.mw
+++ b/Prengi.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Prengi''' z’est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Prengi''' z’est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Pringy (Haute-Savoie)]]
 [[fr:Pringy (Haute-Savoie)]]
