*Empty MediaWiki Message*

--- a/Grôfi.mw
+++ b/Grôfi.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Grôfi''' z’est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Grôfi''' z’est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Gruffy]]
 [[fr:Gruffy]]
