*Empty MediaWiki Message*

--- a/Jevegni.mw
+++ b/Jevegni.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Jevegni''' z’est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Jevegni''' z’est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Juvigny (Haute-Savoie)]]
 [[fr:Juvigny (Haute-Savoie)]]
