--- a/Èneci.mw
+++ b/Èneci.mw
@@ -99,7 +99,7 @@ La vela est ch·èf-luè de três cantons :
 
 === Liyens èxtèrnos ===
 
-[[Category:Comena de Hôta-Savouè|Eneci]]
+[[Category:Comena de Savouè d’Amont|Eneci]]
 [[Category:Èneci|*]]
 
 [[de:Annecy]]
