*Empty MediaWiki Message*

--- a/Vêriér.mw
+++ b/Vêriér.mw
@@ -2,7 +2,7 @@
 
 '''Vêriér''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Veyrier-du-Lac]]
 [[fr:Veyrier-du-Lac]]
