--- a/Vanzi.mw
+++ b/Vanzi.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Vanzi''' z’est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Vanzi''' z’est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Vanzy]]
 [[fr:Vanzy]]
