*Empty MediaWiki Message*

--- a/Sent-Jian-de-Sixt.mw
+++ b/Sent-Jian-de-Sixt.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Sent-Jian-de-Sixt''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Sent-Jian-de-Sixt''' est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Saint-Jean-de-Sixt]]
 [[en:Saint-Jean-de-Sixt]]
