*Empty MediaWiki Message*

--- a/Sassèl.mw
+++ b/Sassèl.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Sassèl''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Sassèl''' est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Saxel]]
 [[fr:Saxel]]
