*Empty MediaWiki Message*

--- a/Sant-Savétro.mw
+++ b/Sant-Savétro.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Sant-Savétro''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Sant-Savétro''' est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[fr:Saint-Sylvestre (Haute-Savoie)]]
 [[it:Saint-Sylvestre (Alta Savoia)]]
