--- a/Salenches.mw
+++ b/Salenches.mw
@@ -1,8 +1,8 @@
 {{Grafia RèfB S}}
 
-'''Salenches''' est ’na comena d’la [[Hôta-Savouè|Savouè d’Amont]].
+'''Salenches''' est ’na comena d’la [[Savouè d’Amont]].
 
-[[Category:Comena de Hôta-Savouè]]
+[[Category:Comena de Savouè d’Amont]]
 
 [[de:Sallanches]]
 [[en:Sallanches]]
