--- a/Gerald_Ford.mw
+++ b/Gerald_Ford.mw
@@ -1,6 +1,6 @@
 {{Grafia RèfB}}
 [[Image:Gerald Ford.jpg|thumb|250px|right|Gerald Ford]]
-'''Gerald Rudolph Ford, Jr.''' dét '''Gerald Ford ''' (nèssu '''Leslie Lynch King, Jr.''' lo [[14 j·ulyèt]] [[1913]] a Omaha, [[Nebraska]]) est un homo politico [[Ètats-Unis d’Amèrica|amèriquen]]. Il at étâ lo 38{{iémo}} Prèsident des Ètats-Unis d’Amèrica entre lo [[9 oût]] [[1974]] et lo [[20 janviér]] [[1977]].
+'''Gerald Rudolph Ford, Jr.''' dét '''Gerald Ford ''' (nèssu '''Leslie Lynch King, Jr.''' lo [[14 j·ulyèt]] [[1913]] a Omaha, [[Nebraska]], môrt lo [[26 Dècembro]] [[2006]] a Rancho Mirage, Californie)) est un homo politico [[Ètats-Unis d’Amèrica|amèriquen]]. Il at étâ lo 38{{iémo}} Prèsident des Ètats-Unis d’Amèrica entre lo [[9 oût]] [[1974]] et lo [[20 janviér]] [[1977]].
 
 [[Category:Prèsident des Ètats-Unis d’Amèrica|Ford, Gerald]]
 
