--- a/26_de_dècembro.mw
+++ b/26_de_dècembro.mw
@@ -8,6 +8,8 @@ Lo '''26 dècembro''' est lo 360{{Iémo}} [[jorn]] de l’[[an]] (361{{Iémo}} e
 
 == Dècès ==
 
+* [[2006]] [[Gerald Ford]], 38o Prèsident des Ètats-Unis d’Amèrica
+
 [[Category:Jorn de l’an]]
 
 [[af:26 Desember]]
