--- a/14_de_j·ulyèt.mw
+++ b/14_de_j·ulyèt.mw
@@ -6,6 +6,8 @@ Lo '''14 j·ulyèt''' est lo 195{{Iémo}} [[jorn]] de l’[[an]] (196{{Iémo}} e
 
 == Nèssances ==
 
+* [[1913]] [[Gerald Ford]], 38o Prèsident des Ètats-Unis d’Amèrica
+
 == Dècès ==
 
 [[Category:Jorn de l’an]]
