*Empty MediaWiki Message*

--- a/Égllése_ortodoxe_d’Alèxandrie.mw
+++ b/Égllése_ortodoxe_d’Alèxandrie.mw
@@ -1,6 +1,6 @@
 {{Grafia RèfB}}
 
-L’'''Égllése ortodoxe d’Alèxandrie''' est una [[Égllése (enstitucion)|Égllése]] [[Ortodoxie (religion)|ortodoxe]] ôtocèfala. Lo ch·èf de l’Égllése pôrte lo titro de ''Pape et Patriarch·e d’Alèxandrie et de tota l’Africa'', avouéc rèsidence a [[Alèxandrie]] en [[Èg·ipte]] (titulèro actuâl : Tèodoro II dês lo [[9 octobro]] [[2004]]).
+L’'''Égllése ortodoxe d’Alèxandrie''' est una [[Égllése (enstitucion)|Égllése]] [[Ortodoxie (religion)|ortodoxe]] ôtocèfala. Lo ch·èf de l’Égllése pôrte lo titro de ''Pape et Patriarch·e d’Alèxandrie et de tota l’Africa'', avouéc rèsidence a [[Alèxandrie]] en [[Èg·ipte]] (titulèro actuâl : [[Tèodoro II d’Alèxandrie|Tèodoro II]] dês lo [[9 octobro]] [[2004]]).
 
 == Liyens èxtèrnos ==
 
