*Empty MediaWiki Message*

--- a/Fulleda.mw
+++ b/Fulleda.mw
@@ -1,14 +1,15 @@
-'''Fulleda''' est ’na comena d’la [[Catalogne]]. 
-
+{{Grafia RèfB}}
 [[Image:CIMG3310.JPG|right|300px|thumb|Església de Santa Maria de Fulleda]]
+'''Fulleda''' est una comena de la [[Catalogne]]. 
 
 == Liyens èxtèrnos ==
-*[http://fulleda.ddl.net/ Web de l'Ajuntament (lengoua catalana)]
-*[http://www.municat.net:8000/omunicat/owa/mun_p01.dad_ens?via=1&cod=2509780001 Informacion d'la Generalitat de Catalunya (lengoua catalana) ]
+
+* [http://fulleda.ddl.net/ Web de l'Ajuntament (lengoua catalana)]
+* [http://www.municat.net:8000/omunicat/owa/mun_p01.dad_ens?via=1&cod=2509780001 Informacion d'la Generalitat de Catalunya (lengoua catalana)]
 *[http://www.idescat.es/territ/BasicTerr?TC=3&V0=1&V1=25097 Informacion de l'Institut d'Estadística de Catalunya (lengoua catalana)]
 * [http://es.geocities.com/santiarbos/vocabularifulleda.html ''Vocabulari fulledenc'' (lengoua catalana)]
 
-[[Category:Catalogne]]
+[[Category:Comena de Catalogne]]
 
 
 [[an:Fulleda]]
