--- a/Égllése_ortodoxe_d’Alèxandrie.mw
+++ b/Égllése_ortodoxe_d’Alèxandrie.mw
@@ -1,5 +1,5 @@
 {{Grafia RèfB}}
-
+[[Image:Cathedrale alexandrie 8.JPG|thumb|right|300px|Plafon(d) de la catèdrâla ortodoxe d’Alèxandrie]]
 L’'''Égllése ortodoxe d’Alèxandrie''' est una [[Égllése (enstitucion)|Égllése]] [[Ortodoxie (religion)|ortodoxe]] ôtocèfala. Lo ch·èf de l’Égllése pôrte lo titro de ''Pape et Patriarch·e d’Alèxandrie et de tota l’Africa'', avouéc rèsidence a [[Alèxandrie]] en [[Èg·ipte]] (titulèro actuâl : [[Tèodoro II d’Alèxandrie|Tèodoro II]] dês lo [[9 octobro]] [[2004]]).
 
 == Liyens èxtèrnos ==
