--- a/Égllése_copta_ortodoxe.mw
+++ b/Égllése_copta_ortodoxe.mw
@@ -1,5 +1,5 @@
 {{Grafia RèfB}}
-[[Image:Assouan cathedrale copte.jpg|thumb|300px|right|Catèdrala copta d’Assouan]]
+[[Image:Assouan cathedrale copte.jpg|thumb|300px|right|Catèdrâla copta d’Assouan]]
 L’'''Égllése copta ortodoxe''' est una [[Égllése (enstitucion)|Égllése]] [[Églléses des três concilos|ortodoxe levantenche]] ôtocèfala. Lo ch·èf de l’Égllése pôrte lo titro de ''Pape d'Alèxandrie et Patriarch·e de la Prèdicacion de Sant Marc et de tota l’Africa'', avouéc rèsidence u [[Lo Cayiro|Cayiro]] en [[Èg·ipte]] (titulèro actuâl : Sa Santetâ [[Chenouda III d’Alèxandrie|Chenouda III]] dês lo [[14 novembro]] [[1971]]).
 
 == Histouère ==
