--- a/Comunôtât_ôtonoma_d’Aragon.mw
+++ b/Comunôtât_ôtonoma_d’Aragon.mw
@@ -8,7 +8,7 @@
 | Emâge_blason = Escudo d'Aragón.svg
 | de+Nom2 = de l’Aragon
 | Devisa = Encognua
-| Emâge_cârta = Locator map of Aragon.png
+| Emâge_cârta = Localización de Aragón (NUTS ES5).png
 | de+Nom3 = d’Aragon
 | Lengoues_ofic = [[Castilyan]]
 | provinces = [[Province de Huèsca|Huèsca]]<br />[[Province de Saragossa|Saragossa]]<br />[[Province de Teruèl|Teruèl]]
