*Empty MediaWiki Message*

--- a/Montpelyér.mw
+++ b/Montpelyér.mw
@@ -12,17 +12,17 @@
 | entèrcomunalitât = [[Comunôtât d’aglomèracion de Montpelyiér Aglomèracion]]
 | latitude = xx 
 | longitude = xx
-| altitude_moy = xx
-| altitude_mini = xx
-| altitude_maxi = xx
-| hèctâres = xx
-| supèrficie = xx
+| altitude_moy = 27
+| altitude_mini = 7
+| altitude_maxi = 57
+| hèctâres = 5 688
+| supèrficie = 56,88
 | habitents = 
 | dâta_pop = 
 | densitât = 
-| habitents_sen = xx
+| habitents_sen = 225 392
 | dâta_sen = 1999
-| densitât_sen = xx
+| densitât_sen = 4 291
 | nom/gentilyâ = Montpelyiéren, Montpelyiérèna<br />(Plurièl : Montpelyiérens, Montpelyiérènes)
 | comenes_limitrofes = 
 | mère = [[Hélène Mandroux]]
@@ -145,7 +145,7 @@ La vela est ch·èf-luè de 10 cantons.
 == Vêre tot-pariér ==
 {{Commons|Montpellier|Montpelyiér}}
 === Articllos conèxos ===
-* [[Lista des comenes d’Ile-et-Vilêna|Comenes de l’Hèrôlt]]
+* [[Lista des comenes de l’Hèrôlt|Comenes de l’Hèrôlt]]
 
 === Liyens èxtèrnos ===
 
