*Empty MediaWiki Message*

--- a/Montpelyér.mw
+++ b/Montpelyér.mw
@@ -23,7 +23,7 @@
 | habitents_sen = 225 392
 | dâta_sen = 1999
 | densitât_sen = 4 291
-| nom/gentilyâ = Montpelyiéren, Montpelyiérèna<br />(Plurièl : Montpelyiérens, Montpelyiérènes)
+| nom/gentilyâ = Montpelyiérenc, Montpelyiérenche<br />(Plurièl : Montpelyiérencs, Montpelyiérenches)
 | comenes_limitrofes = 
 | mère = [[Hélène Mandroux]]
 | mandat = [[2001]] - [[2008]]
@@ -47,7 +47,7 @@
 | règ·ion = [[Lengouadoc-Rosselyon]]
 }}
 {{Gent
-| h = Montpelyiérens
+| h = Montpelyiérencs
 }}
 
 
