*Empty MediaWiki Message*

--- a/Lista_de_les_comenes_de_l’En.mw
+++ b/Lista_de_les_comenes_de_l’En.mw
@@ -275,7 +275,7 @@ Lista des 419 [[Comenes de France|comenes]] de l’[[En (dèpartement)|En]] per 
 |-----
 | 01143 || 01220 || xx || Divonne-les-Bains
 |-----
-| 01144 || 01380 || [[Dommartin]] || Dommartin
+| 01144 || 01380 || [[Dommartin (En)|Dommartin]] || Dommartin
 |-----
 | 01146 || 01400 || xx || Dompierre-sur-Chalaronne
 |-----
