*Empty MediaWiki Message*

--- a/Aragonês.mw
+++ b/Aragonês.mw
@@ -14,7 +14,7 @@
 | tipologia = 
 | famelye = '''Aragonês'''
 | lengouaoficièla = 
-| acadèmia = 
+| acadèmia = ''Academia de l'Aragonés''
 | iso1=an
 | iso2=arg
 | iso3 = {{Doc ISO3|arg|}}
