*Empty MediaWiki Message*

--- a/Catalan.mw
+++ b/Catalan.mw
@@ -20,7 +20,7 @@
 | iso1 = ca
 | iso2 = cat
 | iso3 = {{Doc ISO3|cat|}}
-| sil = CLN
+| sil = cat
 | èchantelyon = 
 Articllo premiér de la Dècllaracion des Drêts de l'Homo<br/><br/>
 '''Articllo 1'''<br/><br/>
