*Empty MediaWiki Message*

--- a/Aragonês.mw
+++ b/Aragonês.mw
@@ -6,7 +6,7 @@
 | colorfamelye = mediumseagreen
 | colorfond = #E8FCD4
 | prononciacion = 
-| dènominacions = Fabla (aragonesa)
+| dènominacions = Fabla aragonesa
 | payis = [[Èspagne]]
 | règ·ion = [[Comunôtât ôtonoma d’Aragon|Aragon]]
 | locutors = environ 11.000
@@ -19,7 +19,9 @@
 | iso2=arg
 | iso3 = {{Doc ISO3|arg|}}
 | sil = arg
-| èchantelyon = 
+| èchantelyon = Articllo premiér de la Dècllaracion des Drêts de l'Homo<br/><br/>
+'''Articlo 1'''<br/><br/>
+Toz os ombres naxen libres y iguals en dinidat y en dreitos. Adotatos de razón y de conzenzia, deben apachar-sen unos con atros d'una manera freternal.
 | tipo = 
 }}
 L’'''aragonês''' est una [[lengoua]] [[Lengoues romanes|romana]].
