--- a/Aragonês.mw
+++ b/Aragonês.mw
@@ -10,7 +10,7 @@
 | payis = [[Èspagne]]
 | règ·ion = [[Comunôtât ôtonoma d’Aragon|Aragon]]
 | locutors = environ 11.000
-| rang = 
+| rang = rtttt
 | tipologia = 
 | famelye = '''Aragonês'''
 | lengouaoficièla = 
