Rèvocacion de les modificacions de [[Special:Contributions/ChrisPtDe|ChrisPtDe]] ([[User_talk:ChrisPtDe|Discussion]]) (retôrn a la vèrsion prècèdenta de [[User:62.101.181.167|62.101.181.167]])

--- a/Aragonês.mw
+++ b/Aragonês.mw
@@ -10,7 +10,7 @@
 | payis = [[Èspagne]]
 | règ·ion = [[Comunôtât ôtonoma d’Aragon|Aragon]]
 | locutors = environ 11.000
-| rang = rtttt
+| rang = 
 | tipologia = 
 | famelye = '''Aragonês'''
 | lengouaoficièla = 
