--- a/Slovènia.mw
+++ b/Slovènia.mw
@@ -32,8 +32,8 @@
 | Payis_endèp = xx
 | Dâta_endèp = xx<br />xx
 | Gentilyâ = xx<br />(Plurièl : xx)
-| Monéya = [[Tolar]]
-| Codo_monéya = SIT
+| Monéya = [[Erô]]
+| Codo_monéya = EUR
 | Fus_hor = xx
 | Himno_nac = xx
 | Féta_nac = xx
