--- a/Kofi_Annan.mw
+++ b/Kofi_Annan.mw
@@ -1,9 +1,11 @@
 {{Grafia RèfB}}
 [[Image:100px-Medaille-Nobel2.png|left|80px|Medalye prix Nobel]]
 [[Image:Kofi Annan.jpg|thumb|right|200 px|Kofi Annan]]
-'''Kofi Atta Annan''' (nèssu lo [[8 avril]] [[1938]] a [[Kumasi]] u [[Gana]]) est [[Secrètèro g·ènèral de l’ONU|secrètèro g·ènèral]] de l’[[Organisacion des Nacions unies|ONU]] depués [[1997]].
+'''Kofi Atta Annan''' (nèssu lo [[8 avril]] [[1938]] a [[Kumasi]] u [[Gana]]) est un diplomate ganèen.
 
-Il a reciu lo [[Prix Nobel de la pèx]] en [[2001]]
+Il at étâ [[Secrètèro g·ènèral de l’ONU|secrètèro g·ènèral]] de l’[[Organisacion des Nacions unies|ONU]] du [[1ér janviér]] [[1997]] u [[31 dècembro]] [[2006]].
+
+Il at reciu lo [[Prix Nobel de la pèx]] en [[2001]].
 
 == Liyen ==
 
