/* Lista des secrètèros g·ènèrals de l’ONU */

--- a/Secrètèro_g·ènèral_de_l’ONU.mw
+++ b/Secrètèro_g·ènèral_de_l’ONU.mw
@@ -9,8 +9,8 @@ Lo '''secrètèro g·ènèral''' est lo fonccionèro més important de l’[[Org
 == Lista des secrètèros g·ènèrals de l’ONU ==
 
 * ...
-* [[Kofi Annan]]
-
+* [[Kofi Annan]] ([[1ér janviér]] [[1997]]-[[31 dècembro]] [[2006]])
+* [[Ban Ki-moon]] (dês lo 1ér janviér [[2007]])
 [[Category:Organisacion des Nacions unies]]
 
 [[fr:Secrétaire général de l'ONU]]
