*Empty MediaWiki Message*

--- a/Organisacion_de_les_Nacions_unies.mw
+++ b/Organisacion_de_les_Nacions_unies.mw
@@ -3,7 +3,7 @@
 [[Image:Flag of the United Nations.svg|thumb|300px|Right|Lo drapél de l’ONU.]]
 L’'''Organisacion des Nacions unies''' ('''ONU''') est una [[organisacion entèrnacionâla]] qui rassemble la plepârt des [[Lista des payis du mondo|Ètats endèpendents du mondo]].
 
-Lo [[secrètèro g·ènèral de l’ONU]] est [[Kofi Annan]] depués [[1997]].
+Lo [[secrètèro g·ènèral de l’ONU]] est [[Ban Ki-moon]] dês lo [[1ér janviér]] [[2007]].
 
 == Histouère ==
 
